general: bugfix: fix horizontal scroll on mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -31,6 +31,8 @@ a {
 }
 
 html {
+  overflow-x: hidden;
+  
   @include responsive.ipad-styles {
     ::-webkit-scrollbar {
       display: none;
